# RAGLoom

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  seed_mock_queries.py
api/: auth.py  chat_service.py  default_graph.py  engine.py  eval_service.py  executors.py  node_registry.py  product_catalog.py  profiles_store.py  query_log.py  rate_limit.py  schemas.py  server.py
config/: chat_profiles.json  settings.py
core/: chunker.py  constraint_filter.py  critic.py  dialogue_flow.py  embedder.py  eval_metrics.py  generator.py  guardrail.py  intent_router.py  kb_crypto.py  loader.py  path_guard.py  personas.py  pipeline.py  price_guard.py  product_matcher.py  product_selector.py  prompt_builder.py  retrieval_judge.py  retrieval_types.py  retriever.py  scope_gate.py  vector_store.py
docs/: RAGLoom_Product_Brief.html  RAGLoom_Product_Brief.md  RAGLoom_Product_Brief_v3.html  節點_IO_對照表.html  節點_IO_對照表.md
eval/: compare_embedders.py  constraint_cases.json  golden_set.json  guardrail_cases.json  judge.py  price_guard_cases.json  report.py  runner.py  scorer.py  test_admin_auth.py  test_brand_names_file.py  test_constraint_extraction.py  test_generator_context.py  test_guardrail.py  test_kb_crypto.py  test_kb_endpoints.py  test_kb_migration.py  test_kb_rotate.py  test_price_guard.py  test_product_images.py  test_product_name_restore.py  test_rate_limit.py  test_reingest_rollback.py  test_retrieval_judge_floor.py
frontend/: chat.html  index.html  package-lock.json  package.json  vite.config.ts
knowledge_base/: brand_guidelines.txt  internal_specs.txt  product_luminos_flex.txt  product_luminos_go_13.txt  product_luminos_pro_15.txt  product_luminos_s14.txt  (+16 more)
(+50 files in other folders)
